syntax = "proto3";

//option csharp_namespace = "Messages";

package Messages.V1;

service DataTransfer{
	rpc TransferFile (stream TransferRequest) returns (TransferResponse);
	rpc Connect (ConnectionRequest) returns (ConnectionResponse);
}

message Configuration{
	string clientName = 1;
	string clientVersion = 2;
	string fileName = 3;
	string path = 4;
	string apiKey = 5;
}

message ConnectionRequest{
	Configuration configurataion = 1;
}

message ConnectionResponse{
	string status = 1;
}

message TransferRequest{
	bytes chunk = 1;
}
 
message TransferResponse{
	string status = 1;
}